force-app/main/default/objects/Apttus_Config2__BillingPlanItem__c/Apttus_Config2__BillingPlanItem__c.object-meta.xml
<CustomObject>
    <description>Represents a billing entry in a billing plan.</description>
    <label>Billing Plan Item</label>
    <nameField>
        <displayFormat>BI-{00000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>