force-app/main/default/objects/Apttus_Config2__BillingPlanItem__c/fields/Apttus_Config2__Amount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Amount__c</fullName>
    <description>The billing amount</description>
    <inlineHelpText>The billing amount</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>