force-app/main/default/objects/Apttus_Config2__BillingPlanItem__c/fields/Apttus_Config2__BillingPlanId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingPlanId__c</fullName>
    <description>ID of the associated billing plan</description>
    <inlineHelpText>ID of the associated billing plan</inlineHelpText>
    <label>Billing Plan</label>
    <referenceTo>Apttus_Config2__BillingPlan__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>