force-app/main/default/objects/Apttus_Config2__BillingPlanItem__c/fields/Apttus_Config2__FixedBillingDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FixedBillingDate__c</fullName>
    <description>The fixed billing date</description>
    <inlineHelpText>The fixed billing date</inlineHelpText>
    <label>Fixed Billing Date (Deprecated)</label>
    <type>Date</type>
</CustomField>