force-app/main/default/objects/Apttus_Config2__BillingPlanItem__c/fields/Apttus_Config2__MilestoneId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MilestoneId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the milestone associated with the plan item</description>
    <inlineHelpText>ID of the milestone associated with the plan item</inlineHelpText>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Apttus_Config2__BillingPlanId__c</field>
            <operation>equals</operation>
            <valueField>Apttus_Config2__Milestone2__c.Apttus_Config2__BillingPlanId__c</valueField>
        </filterItems>
        <infoMessage>Please choose a milestone to associate with the billing plan item</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus_Config2__Milestone2__c</referenceTo>
    <relationshipLabel>Billing Plan Items</relationshipLabel>
    <relationshipName>BillingPlanItems</relationshipName>
    <type>Lookup</type>
</CustomField>