force-app/main/default/objects/Apttus_Config2__BillingPlanItem__c/fields/Apttus_Config2__PaymentTermId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PaymentTermId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the payment term associated with the plan item</description>
    <inlineHelpText>ID of the payment term associated with the plan item</inlineHelpText>
    <label>Payment Term</label>
    <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
    <relationshipLabel>Billing Plan Items</relationshipLabel>
    <relationshipName>BillingPlanItems</relationshipName>
    <type>Lookup</type>
</CustomField>