force-app/main/default/objects/Apttus_Config2__BillingPlanItem__c/fields/Apttus_Config2__Percent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Percent__c</fullName>
    <description>The billing amount expressed as a percentage</description>
    <inlineHelpText>The billing amount expressed as a percentage</inlineHelpText>
    <label>Percent</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>