force-app/main/default/objects/Apttus_Config2__BillingPlanItem__c/fields/Apttus_Config2__ReadyForInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ReadyForInvoiceDate__c</fullName>
    <description>The date when the plan is ready for generating an invoice</description>
    <inlineHelpText>The date when the plan is ready for generating an invoice</inlineHelpText>
    <label>Ready For Invoice Date</label>
    <type>Date</type>
</CustomField>